--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ You have <span id="ethTotal">?</span> ETH,
 <span id="gntTotal">?</span> GNT, and
 <span id="gntwTotal">?</span> GNTW
 <br><br>
+  <h1><font color="red"><b>GNTW IS OBSOLETE</b></font></h1><br><br>
+  Check out <a href="https://migrate.golem.network/">https://migrate.golem.network</a> to migrate your <b>GNT</b> to the fancy new <b>GLM</b> token.
+<br><br>
 
 <b>Convert GNT->GNTW</b><br>
 1. Have GNT: <span id="haveGNT">?</span><br>
