--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
 <body>
+  
+<br>
+  <h1><font color="red"><b>ATTENTION: GNTW IS OBSOLETE</b></font></h1><br><br>
+  Check out <a href="https://migrate.golem.network/">https://migrate.golem.network</a> to migrate your <b>GNT</b> to the fancy new <b>GLM</b> token.<br>
+  This site will stay up to ensure people with GNTW can still convert back to GNT, and then to GLM.
+<br><br>
+
+  
 Convert Golem Tokens (GNT) to Wrapped Golem Tokens (GNTW) back and fourth.<br><br>
 
 <div id="msg">Please Enable Javascript</div><br>
@@ -7,10 +15,6 @@ Convert Golem Tokens (GNT) to Wrapped Golem Tokens (GNTW) back and fourth.<br><b
 You have <span id="ethTotal">?</span> ETH,
 <span id="gntTotal">?</span> GNT, and
 <span id="gntwTotal">?</span> GNTW
-<br><br>
-  <h1><font color="red"><b>GNTW IS OBSOLETE</b></font></h1><br><br>
-  Check out <a href="https://migrate.golem.network/">https://migrate.golem.network</a> to migrate your <b>GNT</b> to the fancy new <b>GLM</b> token.
-<br><br>
 
 <b>Convert GNT->GNTW</b><br>
 1. Have GNT: <span id="haveGNT">?</span><br>
