--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
   
 <br>
-  <h1><font color="red"><b>ATTENTION: GNTW IS OBSOLETE</b></font></h1><br><br>
+  <h1><font color="red"><b>ATTENTION: GNTW IS OBSOLETE</b></font></h1>
   Check out <a href="https://migrate.golem.network/">https://migrate.golem.network</a> to migrate your <b>GNT</b> to the fancy new <b>GLM</b> token.<br>
   This site will stay up to ensure people with GNTW can still convert back to GNT, and then to GLM.
 <br><br>
